<resources>
    <string name="app_name">SportHub</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintNombreUser">Nombre usuario</string>
    <string name="buttonAcceder">Acceder</string>
    <string name="registrar">Registrar usuario</string>
    <string name="registrarUsuario">Registrar</string>
    <string name="futbol">Fútbol</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="tenis">tenis\n</string>
    <string name="formula1">f1</string>
    <string name="googleAuth">922915579598-vn4bdtft22nj7a6ka3noa9b2om1vcg9a.apps.googleusercontent.com</string>
    <string name="regist_twitter">Regist twitter</string>
    <string name="no_tienes_cuenta_registrate_aqu">¿No tienes cuenta? Registrate aquí</string>
    <string name="regist_google">Regist Google</string>
    <string name="default_web_client_id">922915579598-g61gmnm51udf52482gmoah1v8d5qi0gs.apps.googleusercontent.com</string>
</resources>