<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AuthActivity">


    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@color/cardview_light_background"
        android:elevation="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cajaEmail"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloApp"
        android:textColorHint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/cascadia"
            android:id="@+id/textoEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintEmail"
            android:padding="2dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajaEmail"
        android:id="@+id/layoutPassword"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black" >

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/cascadia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintPassword"
            android:id="@+id/textoPassword"
            android:padding="2dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:fontFamily="@font/cascadia"
        android:id="@+id/loginButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/button"
        android:text="@string/buttonAcceder"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutPassword"
        />

    <TextView
        android:id="@+id/signUpButton"
        android:fontFamily="@font/cascadia"
        android:layout_width="wrap_content"
        android:text="@string/registrar"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginButton"
        android:layout_marginTop="95dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>