<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFFF"
    tools:context=".ConfigActivity">

    <ImageView
        android:id="@+id/iconoApp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="46dp"
        android:src="@drawable/iconoapp"
        />

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoApp"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:fontFamily="@font/cascadia"
        android:textSize="35sp"
        android:textColor="@color/material_dynamic_neutral0"
        />



    <Button
        android:id="@+id/botonSoccer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/futbol"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:backgroundTint="#202020"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameApp" />

    <Button
        android:id="@+id/botonBasket"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/baloncesto"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:backgroundTint="#202020"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonSoccer" />

    <Button
        android:id="@+id/botonTennis"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Tenis"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textAlignment="center"
        android:backgroundTint="#202020"
        android:elevation="4dp"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonBasket" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonTennis"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:fontFamily="@font/cascadia"
        android:textSize="24sp"
        android:text="Elige una categoria para ver.\n\nPodrás cambiarla más adelante en 'Configuración'"
        android:padding="20dp"
        android:textColor="@color/material_dynamic_neutral0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
